# mpi_test

./: CMakeCache.txt  CMakeLists.txt  dtasker.cpp  dtasker.hpp  dtasker_mpi.hpp  mpi_hello_world.c  mpi_hello_world.cpp  partask_mpi.hpp  partask_omp.hpp
